[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "slisemap_interactive"
version = "0.3.1"
description = "Interactive plots for Slisemap using Dash"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Anton Björklund", email = "anton.bjorklund@helsinki.fi" }]
keywords = ["Slisemap", "XAI", "visualization", "interactive"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Framework :: Dash",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "slisemap >= 1.4",
    "numpy >= 1.19",
    "dash >= 2.6",
    "pandas >= 1.4",
    "plotly >= 5.9",
    "jupyter-dash >= 0.4",
]


[project.urls]
github = "https://github.com/edahelsinki/slisemap_interactive"

[project.entry-points."xiplot.plugin.read"]
load = "slisemap_interactive.xiplot:plugin_load"

[project.entry-points."xiplot.plugin.plot"]
plugin_embeddingplot = "slisemap_interactive.xiplot:SlisemapEmbeddingPlot"
plugin_barplot = "slisemap_interactive.xiplot:SlisemapModelBarPlot"
plugin_matrixplot = "slisemap_interactive.xiplot:SlisemapModelMatrixPlot"
plugin_densityplot = "slisemap_interactive.xiplot:SlisemapDensityPlot"
plugin_histogramplot = "slisemap_interactive.xiplot:SlisemapHistogramPlot"

[project.scripts]
slisemap_interactive = "slisemap_interactive.app:cli"

[tool.setuptools]
packages = ["slisemap_interactive"]
